name:                dns-verifier
version:             0.1.0.0
synopsis:            DNS ownership verification service
description:         A JSON service for DNS ownership verification.
license-file:        LICENSE
author:              Alex Smith
maintainer:          ags@fastmail.fm
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Routes, DNSVerification
  build-depends:       base
                       , aeson
                       , bytestring
                       , http-types
                       , scotty
                       , transformers
                       , dns

executable dns-verifier
  default-language:    Haskell2010
  hs-source-dirs:      app
  ghc-options:         -Wall
  main-is:             Main.hs
  build-depends:       base
                       , dns-verifier
                       , scotty
                       , wai-extra

test-suite tests
  default-language:    Haskell2010
  hs-source-dirs:      tests
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  build-depends:       base
                       , dns-verifier
                       , hspec
                       , hspec-wai
                       , hspec-wai-json
                       , scotty
                       , wai
